// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavButton renders nav button with icon correctly 1`] = `
.c0.spin {
  -webkit-animation: GLFYz 0.8s steps(8) infinite;
  animation: GLFYz 0.8s steps(8) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<div>
  <button
    className="button disabled"
    disabled="false"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="sc-AxmLO c0 icon"
      fill="currentColor"
      version="1.1"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20.907 0H3.803C3.334.044 3 .356 3 .822c0 1.822.022 3.645.022 5.467v11.355c0 1.823-.022 3.645-.022 5.467 0 .467.334.8.803.822H7.37c2.051 0 3.88.023 6.199 0 .736 0 1.383-.289 1.918-.777.535-.49 1.048-.956 1.538-1.49a201.554 201.554 0 0 0 2.989-3.177c.379-.4.713-.822 1.025-1.267a3.17 3.17 0 0 0 .58-1.844c.045-4.867.045-9.711.067-14.578.022-.444-.312-.778-.78-.8zm-2.074 16.444c-1.115.312-2.275.312-3.434.334-.424 0-.647.155-.736.555-.045.2-.023.867-.023 1.09-.066 1-.044 1.6-.178 2.6-.134.866-.624 1.51-1.762 1.488-2.586-.022-8.005 0-8.161 0V1.556h15.61v13.222c.022 1-.536 1.466-1.316 1.666z"
        fillRule="evenodd"
      />
    </svg>
  </button>
</div>
`;

exports[`SidePanel renders SidePanel correctly 1`] = `
.c0.spin {
  -webkit-animation: GLFYz 0.8s steps(8) infinite;
  animation: GLFYz 0.8s steps(8) infinite;
  -webkit-transform-origin: center;
  -ms-transform-origin: center;
  transform-origin: center;
}

<div
  className="panel closed"
>
  <div
    className="title_bar"
  >
    <h2
      className="title"
    >
      title
    </h2>
    <button
      className="button_flat button_icon button_close"
      onClick={[MockFunction]}
      title="close panel"
      type="button"
    >
      <svg
        aria-hidden="true"
        className="sc-AxmLO c0 button_only_icon"
        fill="currentColor"
        version="1.1"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 7.209L16.791 6 12 10.791 7.209 6 6 7.209 10.791 12 6 16.791 7.209 18 12 13.209 16.791 18 18 16.791 13.209 12z"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>
  <div
    className="panel_contents"
  >
    children
  </div>
</div>
`;

exports[`VerticalNavBar renders correctly 1`] = `
<nav
  className="navbar c"
>
  children
</nav>
`;
